--- a/BlogRazorPage1/Properties/launchSettings.json
+++ b/BlogRazorPage1/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5008;http://localhost:5069",
+      "applicationUrl": "http://localhost:5008;http://localhost:5069",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
